--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ## 数据源配置
-spring.datasource.url=jdbc:mysql://localhost:3306/springdubbo?characterEncoding=UTF-8&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://localhost:3306/fengsite?characterEncoding=UTF-8&allowMultiQueries=true
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -10,3 +10,6 @@ spring.thymeleaf.mode=LEGACYHTML5
 ## 视图控制 ##
 spring.mvc.view.prefix=/templates/
 spring.mvc.view.suffix=.html
+#mapper
+mybatis.typeAliasesPackage=com.fashion.mjysite.entity
+mybatis.mapperLocations=classpath:/mapper/*.xml
