--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,3 +29,10 @@ spring.redis.password=1229971135
 #spring.redis.pool.min-idle=0
 ## 连接超时时间（毫秒）
 spring.redis.timeout=0
+
+## 输出sql日志 ##
+#logging.level.com.cen.dubboprovider.mapper=debug
+logging.level.com.cen.dubboprovider.mapper=warn
+logging.level.org.springframework.web=warn
+logging.level.root=warn
+logging.path=../git/log/mjysitelog
