--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,12 @@
 			<artifactId>shiro-redis</artifactId>
 			<version>2.4.2.1-RELEASE</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.46</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
