--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,36 +1,36 @@
-## Êı¾İÔ´ÅäÖÃ
+## æ•°æ®æºé…ç½®
 spring.datasource.url=jdbc:mysql://localhost:3306/fengsite?characterEncoding=UTF-8&allowMultiQueries=true
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
-## htmlÃâ¼ì ##
+## htmlå…æ£€ ##
 spring.thymeleaf.cache=false
 spring.thymeleaf.mode=LEGACYHTML5
-## ÊÓÍ¼¿ØÖÆ ##
+## è§†å›¾æ§åˆ¶ ##
 spring.mvc.view.prefix=/templates/
 spring.mvc.view.suffix=.html
 #mapper
 mybatis.typeAliasesPackage=com.fashion.mjysite.entity
 mybatis.mapperLocations=classpath:/mapper/*.xml
 spring.redis.host=18.221.36.18
-## Redis·şÎñÆ÷Á¬½Ó¶Ë¿Ú
+## RedisæœåŠ¡å™¨è¿æ¥ç«¯å£
 spring.redis.port=6379
-## Redis·şÎñÆ÷Á¬½ÓÃÜÂë£¨Ä¬ÈÏÎª¿Õ£©
-spring.redis.password=1229971135
-## Á¬½Ó³Ø×î´óÁ¬½ÓÊı£¨Ê¹ÓÃ¸ºÖµ±íÊ¾Ã»ÓĞÏŞÖÆ£©
-#spring.redis.jedis.pool.max-active=8//springboot2.xÅäÖÃ·½Ê½,ÕâÀï×¢ÊÍÊ¹ÓÃÄ¬ÈÏÖµ
-#spring.redis.pool.max-active=8//1.xÅäÖÃ·½Ê½
-### Á¬½Ó³Ø×î´ó×èÈûµÈ´ıÊ±¼ä£¨Ê¹ÓÃ¸ºÖµ±íÊ¾Ã»ÓĞÏŞÖÆ£©
+## RedisæœåŠ¡å™¨è¿æ¥å¯†ç ï¼ˆé»˜è®¤ä¸ºç©ºï¼‰
+spring.redis.password=123456
+## è¿æ¥æ± æœ€å¤§è¿æ¥æ•°ï¼ˆä½¿ç”¨è´Ÿå€¼è¡¨ç¤ºæ²¡æœ‰é™åˆ¶ï¼‰
+#spring.redis.jedis.pool.max-active=8//springboot2.xé…ç½®æ–¹å¼,è¿™é‡Œæ³¨é‡Šä½¿ç”¨é»˜è®¤å€¼
+#spring.redis.pool.max-active=8//1.xé…ç½®æ–¹å¼
+### è¿æ¥æ± æœ€å¤§é˜»å¡ç­‰å¾…æ—¶é—´ï¼ˆä½¿ç”¨è´Ÿå€¼è¡¨ç¤ºæ²¡æœ‰é™åˆ¶ï¼‰
 #spring.redis.pool.max-wait=-1
-### Á¬½Ó³ØÖĞµÄ×î´ó¿ÕÏĞÁ¬½Ó
+### è¿æ¥æ± ä¸­çš„æœ€å¤§ç©ºé—²è¿æ¥
 #spring.redis.pool.max-idle=8
-### Á¬½Ó³ØÖĞµÄ×îĞ¡¿ÕÏĞÁ¬½Ó
+### è¿æ¥æ± ä¸­çš„æœ€å°ç©ºé—²è¿æ¥
 #spring.redis.pool.min-idle=0
-## Á¬½Ó³¬Ê±Ê±¼ä£¨ºÁÃë£©
+## è¿æ¥è¶…æ—¶æ—¶é—´ï¼ˆæ¯«ç§’ï¼‰
 spring.redis.timeout=0
 
-## Êä³ösqlÈÕÖ¾ ##
+## è¾“å‡ºsqlæ—¥å¿— ##
 #logging.level.com.cen.dubboprovider.mapper=debug
 logging.level.com.cen.dubboprovider.mapper=warn
 logging.level.org.springframework.web=warn
