--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,11 +13,11 @@ spring.mvc.view.suffix=.html
 #mapper
 mybatis.typeAliasesPackage=com.fashion.mjysite.entity
 mybatis.mapperLocations=classpath:/mapper/*.xml
-spring.redis.host=127.0.0.1
-## Redis服务器连接端口
+spring.redis.host=18.221.36.18
+## Redis端口
 spring.redis.port=6379
 ## Redis服务器连接密码（默认为空）
-spring.redis.password=123456
+spring.redis.password=1229971135
 ## 连接池最大连接数（使用负值表示没有限制）
 #spring.redis.jedis.pool.max-active=8//springboot2.x配置方式,这里注释使用默认值
 #spring.redis.pool.max-active=8//1.x配置方式
@@ -28,11 +28,10 @@ spring.redis.password=123456
 ### 连接池中的最小空闲连接
 #spring.redis.pool.min-idle=0
 ## 连接超时时间（毫秒）
-spring.redis.timeout=0
+spring.redis.timeout=5000
 
-## 输出sql日志 ##
-#logging.level.com.cen.dubboprovider.mapper=debug
-logging.level.com.cen.dubboprovider.mapper=warn
-logging.level.org.springframework.web=warn
+## 日志输出־ ##
+logging.level.com.fashion.mjysite.mapper=warn
+logging.level.org.springframework.web=debug
 logging.level.root=warn
 logging.path=../git/log/mjysitelog
