--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 ## 数据源配置
-spring.datasource.url=jdbc:mysql://localhost:3306/fengsite?characterEncoding=UTF-8&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://localhost/feng?characterEncoding=UTF-8&allowMultiQueries=true
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -13,11 +13,14 @@ spring.mvc.view.suffix=.html
 #mapper
 mybatis.typeAliasesPackage=com.fashion.mjysite.entity
 mybatis.mapperLocations=classpath:/mapper/*.xml
-spring.redis.host=18.221.36.18
+#spring.redis.host=18.221.36.18
+#spring.redis.host=192.168.214.128
+spring.redis.host=18.223.50.104
+#spring.redis.host=127.0.0.1
 ## Redis端口
 spring.redis.port=6379
 ## Redis服务器连接密码（默认为空）
-spring.redis.password=1229971135
+spring.redis.password=123456
 ## 连接池最大连接数（使用负值表示没有限制）
 #spring.redis.jedis.pool.max-active=8//springboot2.x配置方式,这里注释使用默认值
 #spring.redis.pool.max-active=8//1.x配置方式
@@ -35,3 +38,5 @@ logging.level.com.fashion.mjysite.mapper=warn
 logging.level.org.springframework.web=debug
 logging.level.root=warn
 logging.path=../git/log/mjysitelog
+
+file.upload.localpath=/static/images/
